fixed lots of frontend issues
